# face-hugger

./: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
.github/workflows/: release.yml  test.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-REQUIREMENTS.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-VERIFICATION.md
.planning/phases/02-upload-engine/: 02-01-PLAN.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-SUMMARY.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-upload-ui-repo-management/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-05-SUMMARY.md  03-RESEARCH.md
.planning/phases/04-secondary-features-distribution/: 04-01-SUMMARY.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-RESEARCH.md  (+1 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/: App.tsx  app.css  bindings.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_upload_queue.sql
src-tauri/src/: lib.rs  main.rs  state.rs  tray.rs
src-tauri/src/commands/: auth.rs  upload.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/hf/: api.rs  client.rs  mod.rs  xet.rs
src-tauri/src/upload/: backoff.rs  cancel.rs  hash.rs  mod.rs  progress.rs  queue.rs  types.rs  worker.rs
src-tauri/tests/: auth_test.rs  commands_test.rs  helpers_test.rs
src/commands/: auth.ts  repos.ts  upload.ts
src/components/: UpdateBanner.test.tsx  UpdateBanner.tsx
src/lib/: datasetTypes.ts  preferences.ts  queryClient.ts  repoUtils.test.ts  repoUtils.ts  types.ts
src/queries/: useCommitHistory.ts  useDatasetRows.test.ts  useDatasetViewer.ts  useRepoFiles.test.ts  useRepoFiles.ts  useRepos.test.ts  useRepos.ts
src/stores/: authStore.test.ts  authStore.ts  uploadStore.test.ts  uploadStore.ts
tests/e2e/: auth.spec.ts  dataset-preview.spec.ts  repo-management.spec.ts  smoke.spec.ts  upload-wizard.spec.ts
tests/native/: package-lock.json  package.json  wdio.conf.js
(+93 files in other folders)
