[package]
name = "face-hugger"
version = "0.1.0"
description = "A Tauri App"
authors = []
edition = "2021"

[[bin]]
name = "face-hugger"
path = "src/main.rs"

[lib]
name = "face_hugger_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta = "=2.0.0-rc.22"
specta-typescript = "0.0.9"
keyring = { version = "3", features = ["apple-native", "windows-native", "async-secret-service", "tokio"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
